# Real-Time-Continuous-Levels-of-Detail

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CopyAssets.cmake  README.md  compileShaders.bat  compileShaders.sh  vcpkg.json
include/: application.h  byte_size.h  camera.h  colors.h  ecs.h  engine.h  imgui_example.h  importer.h  input_manager.h  preprocessor.h  printer.h  queue_family_indices.h  renderable.h  renderer.h  timer.h  transformer.h  triangle.h  uniform_buffer_object.h  vbuffer_manager.h  vertex.h  window_manager.h  world.h
include/ecs/: components.h  dense_sphere.h  ecs.h  entity.h  system.h  triangle.h  world.h
include/ecs/entities/: camera.h  dense_sphere.h  input_state_entity.h  monkey.h  world.h
include/ecs/systems/: camera_controller.h  mesh_simplifier_controller.h  sphere_controller.h
include/graphics/: camera.h  colors.h  pnext_chain_reader.h  projector.h  render_mesh.h  render_mesh_simplifiable.h  render_state.h  renderable.h  renderer.h  triangle.h  ui.h  ui_state.h  uniform_buffer_object.h  vbuffer_manager.h  vertex.h
include/graphics/vulkan/: vulkan_buffers.h  vulkan_devices.h  vulkan_images.h  vulkan_imgui.h  vulkan_instance.h  vulkan_memory.h  vulkan_renderpasses.h  vulkan_state.h  vulkan_swapchain.h  vulkan_validation.h
include/io/: input_manager.h  input_state.h  printer.h  window_manager.h
include/physics/: transformer.h
include/util/: byte_size.h  glfw_include.h  glm_include.h  importer.h  performance_logging.h  timer.h
resources/models/: monkey.glb  sphere
resources/shaders/: COMPILED SHADER FILES ARE PLACED HERE
shaders/: sphere.frag  sphere.vert  triangle.frag
source/: application.cpp  camera.cpp  colors.cpp  ecs.cpp  engine.cpp  imgui_example.cpp  importer.cpp  input_manager.cpp  main.cpp  queue_family_indices.cpp  renderer.cpp  transformer.cpp  triangle.cpp  vbuffer_manager.cpp  window_manager.cpp  world.cpp
source/ecs/: dense_sphere.cpp  ecs.cpp  entity.cpp  world.cpp
source/ecs/entities/: camera.cpp  dense_sphere.cpp  input_state_entity.cpp  monkey.cpp  world.cpp
source/ecs/systems/: camera_controller.cpp  mesh_simplifier_controller.cpp  sphere_controller.cpp
source/graphics/: camera.cpp  colors.cpp  projector.cpp  queue_family_indices.cpp  ui.cpp  vbuffer_manager.cpp
source/graphics/renderer/: common.cpp  debug.cpp  device.cpp  drawing.cpp  shaders.cpp  swapchain.cpp  systems.cpp  ui.cpp
source/graphics/vulkan/: vulkan_buffers.cpp  vulkan_devices.cpp  vulkan_images.cpp  vulkan_imgui.cpp  vulkan_instance.cpp  vulkan_memory.cpp  vulkan_renderpasses.cpp  vulkan_state.cpp  vulkan_swapchain.cpp  vulkan_validation.cpp
source/io/: input_manager.cpp  printer.cpp  window_manager.cpp
source/physics/: transformer.cpp
source/renderer/: common.cpp  debug.cpp  device.cpp  drawing.cpp  memory.cpp  queue_family_indices.cpp  shaders.cpp  swapchain.cpp  systems.cpp
source/util/: importer.cpp  performance_logging.cpp  timer.cpp
